# cvss-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: error.rs  helper.rs  lib.rs  v2_0.rs  v3.rs  v4_0.rs
src/utils/: format_vector.rs  mod.rs  parse_metrics.rs  prefix.rs
src/v4_0/: lookup.rs  mod.rs  score.rs  scoring.rs
tests/: mod.rs  score_calculation_tests.rs  v2_tests.rs  v3_tests.rs  v4_tests.rs  vector_validation_tests.rs  walkall_tests.rs
tests/data/: v2_0_cve_2002_0392.json  v2_0_cve_2003_0062.json  v2_0_cve_2003_0818.json
tests/score_calculation_tests/: mod.rs  v2_tests.rs  v3_tests.rs
tests/vector_validation_tests/: v2_tests.rs  v3_tests.rs  v4_tests.rs
