[package]
name = "cvss-rs"
version = "0.2.1"
edition = "2021"
rust-version = "1.80"
description = "A Rust library for representing and deserializing CVSS (Common Vulnerability Scoring System) data."
license = "Apache-2.0"
repository = "https://github.com/scm-rs/cvss-rs"
homepage = "https://github.com/scm-rs/cvss-rs"
documentation = "https://docs.rs/cvss-rs"
keywords = ["cvss", "security", "vulnerability", "scoring"]
categories = ["parser-implementations", "data-structures", "security"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
anyhow = "1.0"
walkdir = "2"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.5"

[profile.walkall]
inherits = "test"
